--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -98,14 +98,14 @@
             </th>
 
 			<th nowrap>
-                <a href="?m=voipaccountbillinglist&amp;o=type{order_check category="type"}">{trans("Connection type:")}</a>
+                <a href="?m=voipaccountbillinglist&amp;o=type{order_check category="type"}">{trans("<!voip>Direction")}</a>
                 {if $listdata.order == "type"}
 					<img src="img/{$direction_check}_order.gif" alt="">
                 {/if}
             </th>
 
 			<th nowrap>
-                <a href="?m=voipaccountbillinglist&amp;o=status{order_check category="status"}">{trans("Status:")}</a>
+                <a href="?m=voipaccountbillinglist&amp;o=status{order_check category="status"}">{trans("<!voip>Status")}</a>
                 {if $listdata.order == "status"}
 					<img src="img/{$direction_check}_order.gif" alt="">
                 {/if}
@@ -162,14 +162,14 @@
 							{tip class="lms-ui-date" text="Enter date in YYYY/MM/DD format (empty field means no limit) or click to choose it from calendar"}>&nbsp;
 					</span>
 
-					<span>{trans("Connection type:")}</span>
+					<span>{trans("<!voip>Direction")}</span>
 					<select size="1" name="ftype" form="choosefilter">
 						<option value="">{trans("- all -")}</option>
-						<option value="{$smarty.const.CALL_INCOMING}" {if $listdata.ftype == $smarty.const.CALL_INCOMING} selected{/if}>{trans("incoming")}</option>
-						<option value="{$smarty.const.CALL_OUTGOING}" {if $listdata.ftype == $smarty.const.CALL_OUTGOING} selected{/if}>{trans("outgoing")}</option>
+						<option value="{$smarty.const.CALL_INCOMING}" {if $listdata.ftype == $smarty.const.CALL_INCOMING} selected{/if}>{trans("<!voip>incoming")}</option>
+						<option value="{$smarty.const.CALL_OUTGOING}" {if $listdata.ftype == $smarty.const.CALL_OUTGOING} selected{/if}>{trans("<!voip>outgoing")}</option>
 					</select>
 
-					<span>{trans("Status:")}</span>
+					<span>{trans("<!voip>Status")}</span>
 					<select size="1" name="fstatus"	form="choosefilter">
 						<option value="">{trans("- all -")}</option>
 						<option value="{$smarty.const.CALL_ANSWERED}"
@@ -177,7 +177,7 @@
 						<option value="{$smarty.const.CALL_NO_ANSWER}"
 							{if $listdata.fstatus == $smarty.const.CALL_NO_ANSWER}selected{/if}>{trans("no answer")}</option>
 						<option value="{$smarty.const.CALL_BUSY}"
-							{if $listdata.fstatus == $smarty.const.CALL_BUSY}selected{/if}>{trans("busy<!voip>")}</option>
+							{if $listdata.fstatus == $smarty.const.CALL_BUSY}selected{/if}>{trans("<!voip>busy")}</option>
 						<option value="{$smarty.const.CALL_SERVER_FAILED}"
 							{if $listdata.fstatus == $smarty.const.CALL_SERVER_FAILED}selected{/if}>{trans("server error")}</option>
 					</select>
@@ -261,15 +261,15 @@
 
 				<td>
 					{if $record.type == $smarty.const.CALL_OUTGOING}
-						{trans("outgoing")}
+						{trans("<!voip>outgoing")}
 					{elseif $record.type == $smarty.const.CALL_INCOMING}
-						{trans("incoming")}
+						{trans("<!voip>incoming")}
 					{/if}
 				</td>
 
 				<td nowrap>
 					{if $record.status == $smarty.const.CALL_BUSY}
-						{trans("busy<!voip>")}
+						{trans("<!voip>busy")}
 					{elseif $record.status == $smarty.const.CALL_ANSWERED}
 						{trans("answered")}
 					{elseif $record.status == $smarty.const.CALL_NO_ANSWER}
