cleanup: voip billing user interface messages

--- a/templates/default/voipaccount/voipaccountbillinglist.html
+++ b/templates/default/voipaccount/voipaccountbillinglist.html
@@ -53,7 +53,7 @@
     <thead>
         <tr {tip text="Click on column name to change sorting order"}>
             <th nowrap>
-                <a href="?m=voipaccountbillinglist&amp;o=begintime{order_check category="begintime"}">{trans("Begin time:<!voip>")}</a>
+                <a href="?m=voipaccountbillinglist&amp;o=begintime{order_check category="begintime"}">{trans("<!voip>Begin time")}</a>
                 {if $listdata.order == "begintime"}
 					<img src="img/{$direction_check}_order.gif" alt="">
                 {/if}
