--- a/templates/default/customer/customereditbox.html
+++ b/templates/default/customer/customereditbox.html
@@ -608,7 +608,7 @@
 								<textarea name="customerdata[documentmemo]" class="lms-ui-wysiwyg-editor"
 									cols="60" rows="10"
 									{if isset($customerinfo.wysiwyg.documentmemo)} data-wysiwyg="{$customerinfo.wysiwyg.documentmemo}"{/if}
-									>{$customerinfo.documentmemo|escape}</textarea>
+									>{$customerinfo.documentmemo|default:""|escape}</textarea>
 								{hint content="Enter document memo (optional)"}
 							</div>
 						</TD>
