--- a/templates/default/payment/paymentedit.html
+++ b/templates/default/payment/paymentedit.html
@@ -9,7 +9,7 @@
     <THEAD>
 	<TR>
 		<TD WIDTH="1%">
-			<IMG SRC="img/payment.gif" ALT="">
+			{icon name='comment'}
 		</TD>
 		<TD WIDTH="1%"><B>{trans("Name:")}</B>
 		</TD>
@@ -22,18 +22,24 @@
     <TBODY>
 	<TR>
 		<TD WIDTH="1%">
-			<IMG SRC="img/creditor.gif" ALT="">
+			{icon name='customer'}
 		</TD>
 		<TD WIDTH="1%">
 			<B>{trans("Creditor:")}</B>
 		</TD>
 		<TD WIDTH="98%">
+			{customerList
+				version=2
+				inputname='payment[customerid]'
+				selected=$payment.customerid
+				trigger='customerid'
+			}
 			<INPUT TYPE="TEXT" SIZE="50" NAME="payment[creditor]" VALUE="{$payment.creditor}" {tip text="Enter creditor name" trigger="creditor"}>
 		</TD>
 	</TR>
 	<TR>
 		<TD WIDTH="1%" NOWRAP>
-			<IMG SRC="img/value.gif" ALT="">
+			{icon name='money'}
 		</TD>
 		<TD WIDTH="1%"><B>{trans("Value:")}</B>
 		</TD>
@@ -43,7 +49,7 @@
 	</TR>
 	<TR>
 		<TD WIDTH="1%">
-			<IMG SRC="img/calendar.gif" ALT="">
+			{icon name='timetable'}
 		</TD>
 		<TD WIDTH="1%" NOWRAP>
 			<B>{trans("Accounting day:")}</B>
@@ -59,7 +65,7 @@
 	</TR>	
 	<TR>	
 		<TD WIDTH="1%">
-			<IMG SRC="img/info1.gif" ALT="">
+			{icon name='description'}
 		</TD>
 		<TD WIDTH="1%">
 			<B>{trans("Description:")}</B>
@@ -70,8 +76,8 @@
 	</TR>
 	<TR>
 	        <TD ALIGN="RIGHT" COLSPAN="3">
-			<A HREF="javascript:document.paymentedit.submit();" ACCESSKEY="S">{trans("Submit")} <IMG SRC="img/save.gif" ALT=""></A>
-			<A HREF="?m=paymentlist">{trans("Cancel")} <IMG SRC="img/cancel.gif" ALT=""></A> 
+			{button type='submit' accesskey='s' label='Submit' icon='submit'}
+			{button href='?m=paymentlist' label='Cancel' icon='cancel'}
 		</TD>
 	</TR>
     </TBODY>
