--- a/templates/default/payment/paymentlist.html
+++ b/templates/default/payment/paymentlist.html
@@ -15,8 +15,8 @@
     <THEAD>
 	<TR>
 		<TD>
-			<IMG SRC="img/payment.gif" ALT=""><BR>
-			<IMG SRC="img/creditor.gif" ALT="">
+			{icon name='comment'}<BR>
+			{icon name='customer'}
 		</TD>
 		<TD class="text-left">
 			<B>{trans("Name:")}</B><BR>
@@ -32,7 +32,7 @@
 			{trans("Payment day:")}
 		</TD>
 		<TD class="bold text-right nobr">
-			{button icon="add" label="New Payment" href="?m=paymentadd"}
+			{button icon='add' label='New Payment' href='?m=paymentadd'}
 		</TD>
 	</TR>
     </THEAD>
@@ -41,12 +41,13 @@
 	<TR class="highlight" data-target-url="?m=paymentinfo&id={$payment.id}" data-name="{$payment.name}">
 		<FORM NAME="addbalance{$payment@index}" METHOD="POST" ACTION="?m=balanceadd">
 		<TD>
-			<IMG SRC="img/payment.gif" ALT=""><BR>
-			<IMG SRC="img/creditor.gif" ALT="">
+			{icon name='comment'}<BR>
+			{icon name='customer'}
 		</TD>
 		<TD>
 			<B>{$payment.name}</B><BR>
-			{$payment.creditor}
+			{if $payment.customerid}<a href="?m=customerinfo&id="{$payment.customerid}">#{$payment.customerid} ({$payment.customername})</a>{/if}
+			{if $payment.creditor}{$payment.creditor}{/if}
 		</TD>
 		<TD class="text-right">
 			({$payment.id|string_format:"%04d"})
@@ -62,10 +63,10 @@
 			<INPUT TYPE="HIDDEN" NAME="m" VALUE="balanceadd">
 			<INPUT TYPE="HIDDEN" NAME="addbalance[value]" VALUE="{math equation="x*-1" x=$payment.value}">
 			<INPUT TYPE="HIDDEN" NAME="addbalance[comment]" VALUE="{$payment.name} / {$payment.creditor}">
-			<A HREF="javascript:document.addbalance{$payment@index}.submit();"><IMG src="img/pay.gif" alt="{trans("Account payment")}" title="{trans("Account payment")}"></A>
-			<A class="delete-payment" HREF="?m=paymentdel&id={$payment.id}"><IMG src="img/delete.gif" alt="{trans("Delete")}" title="{trans("Delete")}"></A>
-			<A HREF="?m=paymentedit&id={$payment.id}"><IMG SRC="img/edit.gif" alt="{trans("Edit")}" title="{trans("Edit")}"></A>
-			<A HREF="?m=paymentinfo&id={$payment.id}"><IMG SRC="img/info.gif" alt="{trans("Info")}" title="{trans("Info")}"></A>&nbsp;
+			{button type='link' href="javascript:document.addbalance{$payment@index}.submit();" icon='money' tip='Account payment'}
+			{button type='link' class='delete-payment' href="?m=paymentdel&id={$payment.id}" icon='delete' tip='Delete'}
+			{button type='link' href="?m=paymentedit&id={$payment.id}" icon='edit' tip='Edit'}
+			{button type='link' href="?m=paymentinfo&id={$payment.id}" icon='info' tip='Info'}
 		</TD>
 		</FORM>
 	</TR>
