--- a/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices-callback-handler.html
@@ -63,7 +63,7 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 id="urgent-notice-title" class="modal-title">{$urgent_notice.cdate|date_format:"%Y/%m/%d %H:%M"} / {$urgent_notice.subject}</h4>
+                        <h4 id="urgent-notice-title" class="modal-title">{$urgent_notice.cdate|date_format:"Y-m-d H:i"} / {$urgent_notice.subject}</h4>
                         {button class="close" data_dismiss="modal" icon="cancel"}
                     </div>
                     <div id="urgent-notice-body" class="modal-body">
