--- a/userpanel/modules/finances/style/bclean/templates/userassignments.html
+++ b/userpanel/modules/finances/style/bclean/templates/userassignments.html
@@ -124,8 +124,8 @@
 					{/if}
 					{if $show_period}
 					<td>
-						{if $assignment.datefrom}{trans("from")} {$assignment.datefrom|date_format:"%Y/%m/%d"}{/if}
-						{if $assignment.dateto}{trans("to")} {$assignment.dateto|date_format:"%Y/%m/%d"}{/if}
+						{if $assignment.datefrom}{trans("from")} {$assignment.datefrom|date_format:"Y-m-d"}{/if}
+						{if $assignment.dateto}{trans("to")} {$assignment.dateto|date_format:"Y-m-d"}{/if}
 					</td>
 					{/if}
 				</tr>
