--- a/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
+++ b/userpanel/modules/finances/style/bclean/templates/userbalancebox.html
@@ -66,7 +66,7 @@
 						{$item=$balancelist.list[balancelist]}
 						{if $item.time > $ldate}
 						<tr class="table-click"{if $item.doctype == $smarty.const.DOC_INVOICE || $item.doctype == $smarty.const.DOC_CNOTE} data-href="?m=finances&f=invoice&id={$item.docid}"{/if}>
-							<td class="text-center text-nowrap">{$item.date|date_format:"%Y-%m-%d"}</td>
+							<td class="text-center text-nowrap">{$item.date|date_format:"Y-m-d"}</td>
 							{if $item.value > 0}
 								<td></td>
 								<td class="text-center text-nowrap table-success text-success">
