--- a/userpanel/modules/finances/templates/userassignments.html
+++ b/userpanel/modules/finances/templates/userassignments.html
@@ -122,8 +122,8 @@
 		{/if}
 		{if $show_period}
 			<td>
-				{if $assignment.datefrom}<span class="nobr">{trans("from")} {$assignment.datefrom|date_format:"%Y/%m/%d"}</span>{/if}
-				{if $assignment.dateto}<span class="nobr">{trans("to")} {$assignment.dateto|date_format:"%Y/%m/%d"}</span>{/if}
+				{if $assignment.datefrom}<span class="nobr">{trans("from")} {$assignment.datefrom|date_format:"Y-m-d"}</span>{/if}
+				{if $assignment.dateto}<span class="nobr">{trans("to")} {$assignment.dateto|date_format:"Y-m-d"}</span>{/if}
 			</td>
 		{/if}
 	</tr>
