--- a/userpanel/modules/helpdesk/templates/helpdeskview.html
+++ b/userpanel/modules/helpdesk/templates/helpdeskview.html
@@ -12,7 +12,7 @@
 	{foreach from=$ticket.messages item=message}
         <tr class="darkest">
 		<td width="1%" align="right">
-			<strong>{$message.createtime|date_format:"%Y/%m/%d<br/>%H:%M"}</strong>
+			<strong>{$message.createtime|date_format:"Y-m-d<br/>H:i"}</strong>
 		</td>
 		<td width="1%" align="right">
 			<strong>{trans("From:")}<br/>{trans("Subject:")}</strong>
