--- a/userpanel/modules/notices/templates/notices.html
+++ b/userpanel/modules/notices/templates/notices.html
@@ -39,7 +39,7 @@
 								{cycle values="light,lucid" print=false name=messages}
 								{foreach $notice as $items}
 								<tr class="dark hand {cycle name=messages}{if $items.status == $smarty.const.MSG_ERROR} alert{elseif $items.status == $smarty.const.MSG_SENT} blend{elseif $items.status == $smarty.const.MSG_DELIVERED} green{/if}" onCLick="ReadNotice('{$items.id}');">
-									<td width="2%" class="nobr">{$items.cdate|date_format:"%Y/%m/%d %H:%M"}</td>
+									<td width="2%" class="nobr">{$items.cdate|date_format:"Y-m-d H:i"}</td>
 									<td width="8%" >{if $items.type == $smarty.const.MSG_USERPANEL_URGENT}<strong>{trans("Urgent")}</strong>{else}{trans("Casual")}{/if}</td>
 									<td width="80%" style="word-break:break-all;">{$items.subject}</td>
 									<td width="10%" style="border: 0px solid;">
@@ -48,7 +48,7 @@
 												{trans("Unread")}
 											{elseif $items.status == $smarty.const.MSG_SENT || $items.status == $smarty.const.MSG_DELIVERED}
 												{trans("Was read on:")}<br />
-												{$items.lastreaddate|date_format:"%Y/%m/%d %H:%M"}
+												{$items.lastreaddate|date_format:"Y-m-d H:i"}
 											{/if}
 										{/if}
 									</td>
