--- a/templates/default/invoice/invoice.html
+++ b/templates/default/invoice/invoice.html
@@ -52,9 +52,9 @@
 					<span class="sdr">
 						{trans("DUPLICATE, draw-up date:")}
 						{if $invoice['duplicate-date']}
-							{$invoice['duplicate-date']|date_format:"Y/m/d"}
+							{$invoice['duplicate-date']|date_format:"Y-m-d"}
 						{else}
-							{$smarty.now|date_format:"Y/m/d"}
+							{$smarty.now|date_format:"Y-m-d"}
 						{/if}
 					</span>
 				{/if}
@@ -79,19 +79,19 @@
 				{/if}
 			</td>
 			<td width="1%" nowrap align="left" valign="top" class="sdr">
-				{$invoice.cdate|date_format:"Y/m/d"}
+				{$invoice.cdate|date_format:"Y-m-d"}
 				{if $invoice.division_cplace != ""}
 					, {$invoice.division_cplace}
 				{/if}
 				<br>
 				{if !ConfigHelper::checkConfig('invoices.hide_sale_date')}
-					{$invoice.sdate|date_format:"Y/m/d"}
+					{$invoice.sdate|date_format:"Y-m-d"}
 					<br>
 				{/if}
 				{if $use_alert_color}
 					<span style="color: red; font-weight: bold;">
 				{/if}
-				{$invoice.pdate|date_format:"Y/m/d"}
+				{$invoice.pdate|date_format:"Y-m-d"}
 				<br>
 				{if $use_alert_color}
 					</span>
