--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -85,7 +85,7 @@
 						{/if}
 					{else}
 						<input type="hidden" name="invoice[cdate]" value="{$invoice.cdate|date_format:"Y/m/d"}">
-						{$invoice.cdate|date_format:"Y/m/d"}
+						{$invoice.cdate|date_format:"Y-m-d"}
 					{/if}
 				</td>
 			</tr>
@@ -101,7 +101,7 @@
 						>
 					{else}
 						<input type="hidden" name="invoice[sdate]" value="{$invoice.sdate|date_format:"Y/m/d"}">
-						{$invoice.sdate|date_format:"Y/m/d"}
+						{$invoice.sdate|date_format:"Y-m-d"}
 					{/if}
 				</td>
 			</tr>
